glx/testdata/valid/place-minimal.glx
places:
  place-12345678:
    name: "Test Place"
