glx/testdata/invalid/custom-vocab-edge-cases/places/place-custom.glx
places:
  place-leeds:
    name: "Leeds"
    type: unknown-place-type
    properties:
      custom_place_prop: "value"


